--- a/task_2/index.html
+++ b/task_2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 
     <title>MY DOCUMENT</title>
 </head>
+
 <body>
     <h1>NAME</h1>
     <p>First name middle name and last name</p>
@@ -17,9 +19,9 @@
     <p id="my_id">Nepali</p>
     <p class="proud">loyal</p>
 
-<a href="https://tenor.com/en-GB/view/laugh-emoji-laughing-emoticon-haha-gif-20905381"
-target="_blank">HIT IT</a>
+    <a href="https://tenor.com/en-GB/view/laugh-emoji-laughing-emoticon-haha-gif-20905381" target="_blank">HIT IT</a>
 
-<img src="https://www.shutterstock.com/image-photo/happy-puppy-dog-smiling-on-260nw-1799966587.jpg" alt="cute">
+    <img src="https://www.shutterstock.com/image-photo/happy-puppy-dog-smiling-on-260nw-1799966587.jpg" alt="cute">
 </body>
+
 </html>
